--- a/index.css
+++ b/index.css
@@ -357,8 +357,8 @@ font-size: 20px;
     margin-bottom: 20px;
 }
 .layer p{
-    line-height: 25px;
-    font-size: 16px;
+    line-height: 20px;
+    font-size: 14px;
 }
 .layer a{
     color: #ff004f;
@@ -480,7 +480,7 @@ nav .fas{
 
 @media only screen and (max-width:520px){
 #header{
-    background-image: url(images/black\ wallpaper.PNG);
+    background-image: url(images/blackwallpaper.PNG);
 }
 .header-text{
     
