--- a/github.css
+++ b/github.css
@@ -30,11 +30,11 @@
       display: none;
   }
   .git{
-    background-color: #101010;
+    background-color: rgb(234, 206, 170);
   }
   .calendar {
       width:100%;
-      border: 1px solid #DDDDDD;
+      border: 1px solid black;
       border-radius: 3px;
       text-align: center;
       margin: auto;
@@ -44,8 +44,8 @@
 
   .calendar-graph text.wday,
   .calendar-graph text.month {
-      font-size: 10px;
-      fill: #aaa;
+      font-size: 15px;
+      fill: rgb(0, 0, 0);
   }
   
   .contrib-legend {
@@ -71,8 +71,8 @@
   }
   
   .text-small {
-      font-size: 12px;
-      color: #767676;
+      font-size: 15px;
+      color: black;
   }
   
   .calendar-graph {
@@ -83,8 +83,8 @@
   .contrib-column {
       padding: 15px 0;
       text-align: center;
-      border-left: 1px solid #ddd;
-      border-top: 1px solid #ddd;
+      border-left: 1px solid rgb(0, 0, 0);
+      border-top: 1px solid rgb(0, 0, 0);
       font-size: 11px;
   }
   
@@ -105,7 +105,7 @@
       line-height: 1.3em;
       font-size: 24px;
       display: block;
-      color: rgb(221, 218, 218);
+      color: rgb(0, 0, 0);
   }
   .day-tooltip {
       white-space: nowrap;
@@ -113,7 +113,7 @@
       z-index: 99999;
       padding: 10px;
       font-size: 12px;
-      color: #959da5;
+      color: #000000;
       text-align: center;
       background: rgba(0,0,0,.85);
       border-radius: 3px;
@@ -121,7 +121,7 @@
       pointer-events: none;
   }
   .day-tooltip strong {
-      color: #dfe2e5;
+      color: #000000;
   }
   .day-tooltip.is-visible {
       display: block;
@@ -140,6 +140,10 @@
   }
   
   text.ContributionCalendar-label {
-      fill: #ccc;
+      fill: rgb(0, 0, 0);
       font-size: 11px;
+  }
+
+  .text-muted{
+    color: black;
   }
