--- a/index.css
+++ b/index.css
@@ -21,15 +21,25 @@ body{
 
 
 .container{
+    width: 100%;
     padding: 10px 10%;
 
 }
 nav{
     display: flex;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 10px 20px;
+}
+nav.sticky{
+    position: fixed;
+    top: 0px;
+    background-color: rgb(234, 206, 170);
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    transition: 0.6s;
+    z-index: 1;
 }
 .logo{
     font-size: 35px;
@@ -163,8 +173,8 @@ nav ul li a:hover::after{
 
 #about{
 padding:60px 0px;
-color: #d8cfcf;
-background-color: #101010;
+color: black;
+background-color: rgb(234, 206, 170);
 }
 .row{
     display: flex;
@@ -186,7 +196,7 @@ background-color: #101010;
 .sub-title{
     font-size: 50px;
     font-weight: 600;
-    color: #fff;
+    color: #1071c8;
 }
 .about-col-2 p{
     margin-top: 10px;
@@ -224,7 +234,7 @@ line-height: 25px;
 
 }
 .contents ul li span{
-    color: #b54769;
+    color: #602020;
     font-size: 16px;
 }
 .contents{
@@ -242,7 +252,7 @@ font-size: 20px;
 /* --------------Services---------- */
 #services{
     padding: 30px 0;
-    background-color: #101010;
+    background-color: rgb(234, 206, 170);
 }
 .services-list{
     display: grid;
@@ -258,10 +268,10 @@ font-size: 20px;
     text-align: center;
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s;
-    color: #b54769;
+    color: #626cd8;
 }
 .services-list div:hover{
-    background-color: #ff004f;
+    background-color:  #795548;
     color: #fff;
     transform: translateY(-10px);
 }
@@ -288,6 +298,7 @@ font-size: 20px;
     color: #005e86;
 }
 #js{
+    background-color: black;
     color: 
     #efd81d;
 }
@@ -310,7 +321,7 @@ font-size: 20px;
 
 #portfolio{
     padding: 50px 0px;
-    background-color: #101010;
+    background-color: rgb(234, 206, 170);
 
 }
 .project-list{
@@ -336,7 +347,9 @@ font-size: 20px;
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
+    background: linear-gradient(
+        #1071c8,
+    #795548);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -361,7 +374,7 @@ font-size: 20px;
     font-size: 14px;
 }
 .layer a{
-    color: #ff004f;
+    color: black;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
@@ -370,7 +383,7 @@ font-size: 20px;
     border-radius: 10px;
 }
 .layer a:hover{
-    background-color: #ff004f;
+    background-color: black;
     color: white;
 }
 .work:hover img{
@@ -383,7 +396,7 @@ transform: scale(1.1);
 /* ---------------Contact--------------- */
 
 #contact{
-    background-color: #101010;
+    background-color: rgb(234, 206, 170);
 }
 
 .contact-left{
@@ -395,6 +408,7 @@ transform: scale(1.1);
 
 .contact-left p{
     margin-top: 30px;
+    color: black;
 }
 .contact-left p i{
     margin-right: 15px;
@@ -408,12 +422,12 @@ transform: scale(1.1);
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
-    color:#ababab ;
+    color:black ;
     display: inline-block;
     transition: transform 0.5s;
 }
 .social-icons a:hover{
-    color: #ff004f;
+    color: white;
     transform: translateY(-5px);
 }
 #email{
@@ -444,14 +458,18 @@ form input,form textarea{
 }
 .btn2{
     display: inline-block;
-    background-color: #ff004f;
+    background-color: black;
     color: #fff;
-    border: 1px solid #ff004f;
+    border: 1px solid white;
     font-size: 18px;
     padding: 14px 60px;
     margin-bottom: 10px;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.btn2:hover{
+    background-color: #005e86;
 }
 
 .copyright{
@@ -462,11 +480,6 @@ form input,form textarea{
     font-weight: 300;
     margin-top: 20px;
 }
-.copyright i{
-    color: #ff0008;
-}
-
-
 
 nav .fas{
     display: none;
